--- a/Cookies_local_storage/1-index.html
+++ b/Cookies_local_storage/1-index.html
@@ -24,12 +24,12 @@
         <h1>Login to the website</h1>
         <input type="text" id="firstname" name="firstname" placeholder="firstname">
         <input type="email" id="email" name="email" placeholder="Email">
-        <button id="login">Log me in</button>
+        <button id="login" type="submit">Log me in</button>
         
     </div>
     <div>
         <h1>Cookies</h1>
-        <button id="show">Show the cookies</button>
+        <button id="show" type="submit">Show the cookies</button>
     </div>
 
     <script>
